# RAG

./: .gitignore  PRD.md  README.md  headroom_memory.db  package-lock.json  汇报.txt  许昊-问答系统汇报.txt
.headroom/: memory.db  memory_graph.db  memory_vectors.db
RAG/: PRD.md  docker-compose.yml
RAG/backend/: Dockerfile  check_no_answer.py  crawl_all.py  crawl_all_v2.py  crawl_cice_deep.py  crawl_colleges_deep.py  crawl_departments_all.py  crawl_departments_deep.py  crawl_new_columns.py  evaluate_5.py  evaluate_500.py  evaluate_rag.py  evaluate_with_ragas.py  init.sql  reprocess_all.py  requirements.txt  run.py
RAG/backend/app/: __init__.py
RAG/backend/crawlers/: __init__.py  base_crawler.py  gxnu_crawler.py  jwc_crawler.py  lib_crawler.py  xgc_crawler.py  yjs_crawler.py  zjc_crawler.py
RAG/chroma/0e4bf08c-8d7f-462a-b9fa-38a72ed96ba4/: index_metadata.pickle
RAG/chroma/825af602-7722-4b4c-addb-a158254d9f7e/: index_metadata.pickle
RAG/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
skills/: install-skill.bat
skills/crawl4ai-skill/: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  requirements.txt
skills/crawl4ai-skill/.github/workflows/: security.yml
skills/crawl4ai-skill/examples/: deep_crawl.sh  search_and_crawl.sh  simple_crawl.sh
skills/crawl4ai-skill/src/: __init__.py  cli.py  config.py  crawler.py  parser.py  search.py  utils.py
skills/crawl4ai-skill/tests/: __init__.py  test_crawler.py  test_login.py  test_parser.py  test_search.py
skills/powershell-utf8-fixer/: SKILL.md
(+42 files in other folders)
