[project]
name = "crawl4ai-skill"
version = "0.3.0"
description = "Smart web crawling and search for OpenClaw"
authors = [{name = "Lancelin"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["crawl4ai", "openclaw", "web-scraping", "search"]

dependencies = [
    "crawl4ai>=0.8.0",
    "ddgs>=8.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
crawl4ai-skill = "src.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
